CE-3446 Fix z-index to not cover button

--- a/front/main/app/styles/component/_article-edit-highlighted-entrypoint.scss
+++ b/front/main/app/styles/component/_article-edit-highlighted-entrypoint.scss
@@ -7,6 +7,7 @@
 	left: 0;
 	position: fixed;
 	width: 100%;
+	z-index: $z-6 + 1;
 
 	&.show-edit {
 		animation-name: showEdit;
